docs/api/qiskit/0.33/qiskit.transpiler.passes.CollectMultiQBlocks.mdx
---
title: CollectMultiQBlocks (v0.33)
description: API reference for qiskit.transpiler.passes.CollectMultiQBlocks in qiskit v0.33
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.CollectMultiQBlocks
---

# CollectMultiQBlocks

<Class id="qiskit.transpiler.passes.CollectMultiQBlocks" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.19/qiskit/transpiler/passes/optimization/collect_multiqubit_blocks.py" signature="CollectMultiQBlocks(*args, **kwargs)" modifiers="class">
  Bases: `qiskit.transpiler.basepasses.AnalysisPass`

  Collect sequences of uninterrupted gates acting on groups of qubits. max\_block\_size specifies the maximum number of qubits that can be acted upon by any single group of gates

  Traverse the DAG and find blocks of gates that act consecutively on groups of qubits. Write the blocks to propert\_set as a list of blocks of the form:

  ```python
  [[g0, g1, g2], [g4, g5]]
  ```

  Blocks are reported in a valid topological order. Further, the gates within each block are also reported in topological order Some gates may not be present in any block (e.g. if the number of operands is greater than max\_block\_size)

  A Disjont Set Union data structure (DSU) is used to maintain blocks as gates are processed. This data structure points each qubit to a set at all times and the sets correspond to current blocks. These change over time and the data structure allows these changes to be done quickly.

  ## Methods

  <span id="qiskit-transpiler-passes-collectmultiqblocks-find-set" />

  ### find\_set

  <Function id="qiskit.transpiler.passes.CollectMultiQBlocks.find_set" signature="CollectMultiQBlocks.find_set(index)">
    DSU function for finding root of set of items If my parent is myself, I am the root. Otherwise we recursively find the root for my parent. After that, we assign my parent to be my root, saving recursion in the future.
  </Function>

  <span id="qiskit-transpiler-passes-collectmultiqblocks-name" />

  ### name

  <Function id="qiskit.transpiler.passes.CollectMultiQBlocks.name" signature="CollectMultiQBlocks.name()">
    Return the name of the pass.
  </Function>

  <span id="qiskit-transpiler-passes-collectmultiqblocks-run" />

  ### run

  <Function id="qiskit.transpiler.passes.CollectMultiQBlocks.run" signature="CollectMultiQBlocks.run(dag)">
    Run the CollectMultiQBlocks pass on dag.

    The blocks contain “op” nodes in topological sort order such that all gates in a block act on the same set of qubits and are adjacent in the circuit.

    The blocks are built by examining predecessors and successors of “cx” gates in the circuit. u1, u2, u3, cx, id gates will be included.

    After the execution, `property_set['block_list']` is set to a list of tuples of `DAGNode` objects
  </Function>

  <span id="qiskit-transpiler-passes-collectmultiqblocks-union-set" />

  ### union\_set

  <Function id="qiskit.transpiler.passes.CollectMultiQBlocks.union_set" signature="CollectMultiQBlocks.union_set(set1, set2)">
    DSU function for unioning two sets together Find the roots of each set. Then assign one to have the other as its parent, thus liking the sets. Merges smaller set into larger set in order to have better runtime
  </Function>

  ## Attributes

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.CollectMultiQBlocks.is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.CollectMultiQBlocks.is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>
</Class>

